src/routes/home.css
.img-container {
    position: relative;
    background-color: plum;
    height: auto;
    width: 100%;
    aspect-ratio: 7 / 4;
    overflow: hidden;
}

.vsplit-txt {
    height: 25vh;
    width: 100%;
    text-align: center;
    z-index: 20;
    position: absolute;

}

.vsplit-txt div {
    background-color: rgba(255, 255, 255, 0.438);
    height: 100%;
    width: 100%;
    padding: 30px 55px;
}


.img-back-arrow {
    position: absolute;
    z-index: 10;
    top: 45%;
    left: 0;
    margin-left: 20px;
}

.img-next-arrow {
    position: absolute;
    z-index: 10;
    top: 45%;
    right: 0;
    margin-right: 20px;
}

.vsplit-img {
    width: 100%;
    object-fit: cover;
}

.f-tomorrow {
    font-family: 'Tomorrow', serif;
}

.f-kdam {
    font-family: 'Kdam Thmor Pro', serif;
}

.services {
    height: 45vh;
}

.services h2 {
    font-weight: 700;
    font-size: 55px;
    margin-left: 30px;
}

.services-container {
    padding: 50px 60px;
}

.services-card {
    width: 25vw;
    min-width: 200px;
    background-color: white;
    text-align: center;
    margin: 0 25px 35px 0;
    top: 0;
    transition: top ease 0.5s;
}

.services-card:hover{
    margin-top: -10px;
}

.services-card:hover h3{
    color: rgb(0, 0, 161);
}

.services-card h3 {
    font-family: 'Kdam Thmor Pro', serif;
    margin: 25px 0px;
}

.serv-card-img-container {
    width: 100%;
    height: auto;
    aspect-ratio: 4/3;
    overflow: hidden;
}

.serv-card-img {
    object-fit: cover;
    width: 100%;
}

#bold-ad-div {
    background-color: rgb(2, 0, 107);
    padding: 50px 0;
    text-align: center;
}

#bold-ad {
    color: white;
}

#promo-head {
    text-align: center;
    padding: 3vw 30px;
    background-color: rgb(51, 49, 49);
}

#promo-head h1 {
    color: white;
    margin-bottom: 0;
}

.promo-card {
    background-color: white;
    margin: 40px 0;
    width: 75vw;
    padding: 20px 0px 20px 15px;
    display: flex;
    flex-wrap: wrap;
    box-shadow: 7px 9px 0.5px rgba(146, 146, 146, 0.801);
}

.promo-card-r {
    margin-left: auto;
    background-color: white;
    margin-top: 40px;
    margin-bottom: 40px;
    width: 75vw;
    padding: 20px 20px 20px 15px;
    display: flex;
    flex-wrap: wrap;
    text-align: right;
    box-shadow: -7px 9px 0.5px rgba(146, 146, 146, 0.801);
}

.three-sq {
    height: 100px;
}

.promo-c-text {
    margin-left: 20px;
    margin-right: 20px;
    height: fit-content;
}

.promo-card div {
    width: fit-content;
    max-width: 65vw;
}

.promo-card-r div {
    width: fit-content;
    max-width: 65vw;
}

.break {
    flex-basis: 100%;
    height: 0;
}

